--- a/src/Extensions.FileProviders.Google/Extensions.FileProviders.Google.csproj
+++ b/src/Extensions.FileProviders.Google/Extensions.FileProviders.Google.csproj
@@ -7,4 +7,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Extensions.FileProviders\Extensions.FileProviders.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="3.1.5" />
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.5" />
+  </ItemGroup>
 </Project>
