--- a/test/Extensions.FileProviders.Google.Tests/Extensions.FileProviders.Google.Tests.csproj
+++ b/test/Extensions.FileProviders.Google.Tests/Extensions.FileProviders.Google.Tests.csproj
@@ -11,9 +11,14 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="Google.Cloud.Storage.V1" Version="3.1.0" />
+    <PackageReference Include="Moq" Version="4.14.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Extensions.FileProviders.Google\Extensions.FileProviders.Google.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="sampleCredentials.json" />
   </ItemGroup>
 </Project>
